WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
141854
Invalid assert in CompositeEditCommand::insertNodeAfter/insertNodeBefore
https://bugs.webkit.org/show_bug.cgi?id=141854
Summary
Invalid assert in CompositeEditCommand::insertNodeAfter/insertNodeBefore
alan
Reported
2015-02-20 14:00:29 PST
ASSERT(!refChild->hasTagName(bodyTag)); should be allowed
Attachments
Patch
(3.93 KB, patch)
2015-02-20 14:17 PST
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(4.29 KB, patch)
2015-02-20 14:22 PST
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(4.31 KB, patch)
2015-02-20 14:26 PST
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2015-02-20 14:17:40 PST
Created
attachment 247002
[details]
Patch
Ryosuke Niwa
Comment 2
2015-02-20 14:19:20 PST
Comment on
attachment 247002
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=247002&action=review
> Source/WebCore/ChangeLog:8 > + Inserting content before/after the body as the result of editing is a valid operation.
I think we should elaborate that while we don't want to move nodes out of body element, we can't check that condition with these assertions.
> LayoutTests/editing/inserting/insert-as-body-sibling.html:1 > +<head>
Missing DOCTYPE.
> LayoutTests/editing/inserting/insert-as-body-sibling.html:13 > + if (window.testRunner) > + testRunner.dumpAsText(); > + > + var iframe = document.createElement("iframe"); > + document.head.parentNode.insertBefore(iframe, document.head.nextSibling); > + document.execCommand("SelectAll"); > + document.designMode = "on"; > + document.execCommand("JustifyCenter", false, null);
Please indent by 4 spaces, not 2 spaces.
alan
Comment 3
2015-02-20 14:22:40 PST
Created
attachment 247003
[details]
Patch
alan
Comment 4
2015-02-20 14:26:21 PST
Created
attachment 247004
[details]
Patch
alan
Comment 5
2015-02-20 14:26:48 PST
(In reply to
comment #2
)
> Comment on
attachment 247002
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=247002&action=review
> > > Source/WebCore/ChangeLog:8 > > + Inserting content before/after the body as the result of editing is a valid operation. > > I think we should elaborate that while we don't want to move nodes out of > body element, we can't check that condition with these assertions. > > > LayoutTests/editing/inserting/insert-as-body-sibling.html:1 > > +<head> > > Missing DOCTYPE. > > > LayoutTests/editing/inserting/insert-as-body-sibling.html:13 > > + if (window.testRunner) > > + testRunner.dumpAsText(); > > + > > + var iframe = document.createElement("iframe"); > > + document.head.parentNode.insertBefore(iframe, document.head.nextSibling); > > + document.execCommand("SelectAll"); > > + document.designMode = "on"; > > + document.execCommand("JustifyCenter", false, null); > > Please indent by 4 spaces, not 2 spaces.
Done. Thanks.
WebKit Commit Bot
Comment 6
2015-02-20 15:27:53 PST
Comment on
attachment 247004
[details]
Patch Clearing flags on attachment: 247004 Committed
r180464
: <
http://trac.webkit.org/changeset/180464
>
WebKit Commit Bot
Comment 7
2015-02-20 15:27:58 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug