Invalid assert in CompositeEditCommand::insertNodeAfter/insertNodeBefore https://bugs.webkit.org/show_bug.cgi?id=141854

Reviewed by Ryosuke Niwa.

Inserting content before/after the body as the result of editing is a valid operation.
This assert was originally introduced to cover cases where edited content would get moved
out of body. However, asserting such operation properly is not possible atm.

Source/WebCore:

Test: editing/inserting/insert-as-body-sibling.html

* editing/CompositeEditCommand.cpp:
(WebCore::CompositeEditCommand::insertNodeBefore):
(WebCore::CompositeEditCommand::insertNodeAfter):

LayoutTests:

* editing/inserting/insert-as-body-sibling-expected.txt: Added.
* editing/inserting/insert-as-body-sibling.html: Added.


Canonical link: https://commits.webkit.org/159894@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@180464 268f45cc-cd09-0410-ab3c-d52691b4dbfc